--- a/views/profile.pug
+++ b/views/profile.pug
@@ -3,4 +3,5 @@ extends /layouts/layout.pug
 block header
   h1 Profile
 block content
-  h1 Coming soon.
+  h1 Your email is #{email}
+  h1 Edit forms and what not coming soon.
